--- a/index.html
+++ b/index.html
@@ -156,6 +156,31 @@
 								<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 								<div class="timeline-panel">
 									<div class="timeline-heading">
+										<h3 class="timeline-title">Software Engineering Intern</h3>
+										<span class="company">MicroStratergy  - 05/2024 - 08/2024</span>
+										<span class="company">Tysons Corner, VA, USA</span>
+									</div>
+									<div class="timeline-body">
+										<p>Designed and implemented auto-completion feature for search engine within 
+										 MicroStrategy’s analytics platform utilizing vector space embeddings and efficient 
+										 in-memory indexing to accelerate and refine query suggestions. Enhanced search response 
+										 times by developing a caching mechanism that preemptively retrieves and validates SQL 
+										 from semantically similar past inquiries, ensuring accurate results and substantially 
+										 expediting response generation. Developed a Cube recommendation engine using 
+										 Retrieval-Augmented Generation (RAG) for efficient metadata management, facilitating 
+										 precise Cube identification to power MicroStrategy’s Auto Dashboard and BI features. 
+										 Designed and implemented an API in Spring Boot for the telemetry service, enabling 
+										 secure data retrieval between two microservices. Implemented a planner using LangGraph 
+										 to solve complex queries during an internal hackathon aimed at creating the next version
+										 of the product.
+										</p>
+									</div>
+								</div>
+							</li>
+							<li class="animate-box timeline-inverted">
+								<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+								<div class="timeline-panel">
+									<div class="timeline-heading">
 										<h3 class="timeline-title">Technical Intern</h3>
 										<span class="company">PricewaterhouseCoopers LLP - 01/2022 - 06/2022</span>
 									</div>
