--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 									<h3>Internship Experience</h3>
 								</div>
 							</li>
-							<li class="animate-box timeline-inverted">
+							<li class="timeline-unverted animate-box">
 								<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 								<div class="timeline-panel">
 									<div class="timeline-heading">
