--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 								<div class="profile-thumb" style="background: url(images/Jai_photo_3.jpg);"></div>
 								<h1><span>Jai Joshi</span></h1>
-								<h3><span>Web Developer // Android/IoS App Developer // AI-ML Enthusiast</span></h3>
+								<h3><span>Software Engineer . AI-ML Enthusiast . Generative AI</span></h3>
 								<p>
 								<ul class="fh5co-social-icons">
 									<!-- <li><a href="#"><i class="icon-twitter2"></i></a></li> -->
