--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Profile &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
+	<title>Jai Joshi - Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
 	<meta name="keywords"
@@ -80,7 +80,8 @@
 									<!-- <li><a href="#"><i class="icon-facebook2"></i></a></li> -->
 									<li><a href="https://www.linkedin.com/in/jj0310/"><i class="icon-linkedin2"></i></a>
 									</li>
-									<li><a href="#"><i class="icon-dribbble2"></i></a></li>
+									<li><a href="https://jaijoshi123.github.io/resume/Jai_Joshi_Full_Time_1.pdf"><i class="icon-document"></i></a></li>
+									<!-- <li><a href="#"><i class="icon-dribbble2"></i></a></li> -->
 								</ul>
 								</p>
 							</div>
